# opengl-game-temp

./: CMakeLists.txt  LICENSE
assets/: fragment.glsl  vertex.glsl
src/: Camera.cpp  Camera.hpp  Context.cpp  Context.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  TestTriangle.cpp  TestTriangle.hpp  Texture.hpp  main.cpp
